--- a/backend_merge/.env
+++ b/backend_merge/.env
@@ -1,3 +1,7 @@
 FLASK_APP=app.py
 DATABASE_URL=sqlite:///whatsapp_app.db
+BAFOKA_API_URL=http://localhost:9000    # points to fake local server for now
+BAFOKA_API_KEY=fake-key-for-dev       # fake for now
+BAFOKA_WEBHOOK_SECRET=please_change    # used to verify webhook signatures later
+PORT=5000
 # add RPC_URL, CONTRACT_ADDRESS, PRIVATE_KEY later for real chain
