fix: Add remaining core files for Bafoka API integration
- Update app.py with restored functions and API endpoints
- Update bafoka_client.py with real sandbox endpoints
- Update core_logic.py for phone-based operations
- Update .env with sandbox API URL
- Update requirements.txt with new dependencies

--- a/backend_merge/bot/requirements.txt
+++ b/backend_merge/bot/requirements.txt
@@ -4,3 +4,10 @@ twilio
 python-dotenv
 web3 # optional, only when implementing chain
 requests # For API requests
+pytest
+pytest-cov
+typeguard
+anyio
+openai-whisper
+gTTS
+torch
