restore endpoints, added clarifications. To add voice process

--- a/backend_merge/.env
+++ b/backend_merge/.env
@@ -1,7 +1,21 @@
 FLASK_APP=app.py
 DATABASE_URL=sqlite:///whatsapp_app.db
+
+# Bafoka API Configuration
 BAFOKA_API_URL=https://sandbox.bafoka.network
 BAFOKA_API_KEY=fake-key-for-dev       # Not used for sandbox currently
 BAFOKA_WEBHOOK_SECRET=please_change    # used to verify webhook signatures later
+
+# Fake Bafoka API (for testing when real API is unavailable)
+# Set USE_FAKE_BAFOKA=true to force using fake API
+USE_FAKE_BAFOKA=false
+FAKE_BAFOKA_URL=http://localhost:9000
+
+# Flask Server
 PORT=5000
-# add RPC_URL, CONTRACT_ADDRESS, PRIVATE_KEY later for real chain
+
+# Blockchain (optional - add later for real chain)
+# RPC_URL=
+# CONTRACT_ADDRESS=
+# PRIVATE_KEY=
+
