--- a/backend_merge/.env
+++ b/backend_merge/.env
@@ -1,6 +1,6 @@
 FLASK_APP=app.py
 DATABASE_URL=sqlite:///whatsapp_app.db
-BAFOKA_API_URL=https://sandbox.bafoka.network
+BAFOKA_API_URL=http://localhost:9000
 BAFOKA_API_KEY=fake-key-for-dev       # Not used for sandbox currently
 BAFOKA_WEBHOOK_SECRET=please_change    # used to verify webhook signatures later
 PORT=5000
